[package]
name = "picawngh"
version = "0.1.0"
authors = ["lesguillemets <kgkacko+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
rand = "0.7.2"
termion = "1.5.4"
